src/test/ui/parser/duplicate-visibility.rs
// error-pattern:expected one of `(`, `fn`, `static`, or `type`
extern {
    pub pub fn foo();
}
